# TactilePsychophysics

./: CMakeLists.txt  README.md  imgui.ini
calibs/: silver_20200519.json
calibs/CM/: dof_normal.json  dof_tangential.json  subject_50.json
calibs/Psych/: JanellePhD.json  subject_50.json
calibs/User/: subject_50.json  subject_92.json
data/: _jnd_subject_50_Normal_Position_MCS_2021-10-25_15.57.05.csv  _subject_50_dof1_exp1_2021-11-04_18.26.11.csv  _subject_92_dof0_exp0_2021-11-04_18.18.05.csv  _subject_92_dof1_exp0_2021-11-04_18.11.16.csv  _subject_timeseries_50_Normal_Position_SM_202369056-122-00_7602287.7077985.00.xlsx  _subject_timeseries_50_dof1_exp1_2021-11-04_18.26.11.csv  _subject_timeseries_92_Normal_Force_SM_1751116288-255-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_MA_1768943184-238-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_-1259344704-92-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_-1448087904-193-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_-416290640-53-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_1899161584-155-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_446033616-76-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_697691792-26-00_7602287.7077985.00.csv  _subject_timeseries_92_Normal_Position_SM_87026928-169-00_7602287.7077985.00.csv  _subject_timeseries_92_Shear_Position_MA_1044192-234-00_7602287.7077985.00.csv  _subject_timeseries_92_Shear_Position_SM_-143660064-10-00_7602287.7077985.00.csv  _subject_timeseries_92_dof0_exp0_2021-11-04_18.18.05.csv  _subject_timeseries_92_dof1_exp0_2021-11-04_18.09.24.csv  _subject_timeseries_92_dof1_exp0_2021-11-04_18.10.15.csv  _subject_timeseries_92_dof1_exp0_2021-11-04_18.10.51.csv  _subject_timeseries_92_dof1_exp0_2021-11-04_18.11.16.csv  _subject_trialdata_50_Normal_Position_SM_202369056-122-00_7602287.7077985.00.csv  _subject_trialdata_92_Normal_Force_SM_1751116288-255-00_7602287.7077985.00.csv  _subject_trialdata_92_Normal_Position_MA_1768943184-238-00_7602287.7077985.00.csv  _subject_trialdata_92_Normal_Position_SM_-416290640-53-00_7602287.7077985.00.csv  _subject_trialdata_92_Normal_Position_SM_446033616-76-00_7602287.7077985.00.csv  _subject_trialdata_92_Shear_Position_MA_1044192-234-00_7602287.7077985.00.csv  _subject_trialdata_92_Shear_Position_SM_-143660064-10-00_7602287.7077985.00.csv
data/0/: _subject_50_poiData_dof1_exp0_2021-11-09_08.57.08.csv  _subject_50_poiData_dof1_exp0_2021-11-09_12.09.20.csv  _subject_50_poiData_dofNormal_expInd_2021-11-09_12.17.11.csv  _subject_50_timeseries_Normal_dof_Ind_exp_0_2021-11-09_12.18.39.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_08.57.08.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_09.02.36.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_09.04.35.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_09.08.29.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_12.08.52.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_12.09.20.csv  _subject_50_timeseries_dof1_exp0_2021-11-09_12.17.11.csv
data/1/: _subject_50_poiData_dof1_exp1_2021-11-08_16.28.43.csv  _subject_50_poiData_dof1_exp1_2021-11-08_16.37.53.csv  _subject_50_poiData_dof1_exp1_2021-11-08_16.40.54.csv  _subject_50_poiData_dof1_exp1_2021-11-08_16.46.15.csv  _subject_50_poiData_dof1_exp1_2021-11-08_16.47.59.csv  _subject_50_poiData_dof1_exp1_2021-11-09_11.06.21.csv  _subject_50_poiData_dof1_exp1_2021-11-09_11.12.53.csv  _subject_50_poiData_dof1_exp1_2021-11-09_11.16.28.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.26.01.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.28.43.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.37.53.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.39.33.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.40.54.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.44.40.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.46.15.csv  _subject_50_timeseries_dof1_exp1_2021-11-08_16.47.59.csv  _subject_50_timeseries_dof1_exp1_2021-11-09_11.12.53.csv  _subject_50_timeseries_dof1_exp1_2021-11-09_11.16.28.csv
data/MA/: _subject_50_timeseries_Normal_Position_MA_-1584273056-11-00_7602287.7077985.00.csv  _subject_50_timeseries_Normal_Position_MA_-2079331488-46-00_7602287.7077985.00.csv  _subject_50_timeseries_Normal_Position_MA_-242225664-43-00_7602287.7077985.00.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-05_18.46.40.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-05_19.07.23.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-08_10.40.54.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.33.18.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.36.54.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.37.50.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.40.34.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.42.25.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.50.20.csv  _subject_50_timeseries_Normal_Position_MA_2021-11-09_09.51.47.csv  _subject_50_timeseries_Normal_Position_MA_2052057616-26-00_7602287.7077985.00.csv  _subject_50_timeseries_Normal_Position_MA_659810176-113-00_7602287.7077985.00.csv  _subject_50_trialdata_Normal_Position_MA_-1584273056-11-00_7602287.7077985.00.csv  _subject_50_trialdata_Normal_Position_MA_-2079331488-46-00_7602287.7077985.00.csv  _subject_50_trialdata_Normal_Position_MA_-242225664-43-00_7602287.7077985.00.csv  _subject_50_trialdata_Normal_Position_MA_2021-11-05_18.46.40.csv  _subject_50_trialdata_Normal_Position_MA_2021-11-05_19.07.23.csv  (+2 more)
misc/: cm.ai  cm.rc  imgui.ini
old/: ATI_testing.cpp  bandwidth.cpp  calibrator.cpp  force.cpp  force_ATI.cpp  force_cal.cpp  gui.cpp  pd_tune.cpp  pid_tuner.cpp  presets.cpp  vr_server.cpp
src/: CM2.hpp  CMGui.hpp  CMHub.cpp  CMHub.hpp  CapstanModule.cpp  CapstanModule.hpp  PsychophysicalTesting.cpp  PsychophysicalTesting.hpp  Robot.hpp  UserParams.cpp  UserParams.hpp  Vsb.hpp  main.cpp  runSingleMotor.cpp  runSingleMotorPos.cpp
src/Apps/: ContactMechExp.cpp  (+32 more)
(+34 files in other folders)
